cpp/bool_bench.h

#pragma once

#include <stdint.h>
#include <stddef.h>
#ifndef __cplusplus
#include <stdbool.h>
#endif

#ifdef __cplusplus
extern "C" {
#endif

typedef struct bb_generator bb_generator;
typedef struct bb_data bb_data;
typedef struct bb_tensor bb_tensor;

bb_generator* bb_generator_create(size_t workers);
void bb_generator_destroy(bb_generator* generator);

void bb_data_acquire(bb_data* data);
uint16_t bb_data_bitness(const bb_data* data);
size_t bb_data_cases(const bb_data* data);
size_t bb_data_reps(const bb_data* data);
// Transfers buffer ownership to the caller. The returned pointer must later be
// passed to bb_float_buffer_destroy(). Each buffer may be taken exactly once.
float* bb_data_take_values(bb_data* data);
float* bb_data_take_targets(bb_data* data);
void bb_data_release(bb_generator* generator, bb_data* data);

void bb_tensor_acquire(bb_tensor* tensor);
// Transfers buffer ownership to the caller. May be called exactly once.
float* bb_tensor_take_values(bb_tensor* tensor);
void bb_tensor_release(bb_generator* generator, bb_tensor* tensor);

// Frees a float buffer transferred out of a data or tensor handle.
void bb_float_buffer_destroy(float* buffer);

/*******************************************************************************
 * There are 3 types of boolean functions served by this library.
 * 1: Backed by binary tree: `bb_tree_*`
 *    Tree is generated by Rémy-like algorith for tree size of up to 2^16.
 *    Bitness can vary from 10 to 256.
 *    `depth` and `nodes` computed from supporting tree.
 *
 * 2: Backed by random table. `bb_table_*`
 *    Bitness can vary from 4 to 256.
 *    For bitness in [4, 6] represented as uint64_t.
 *    For bitness in [7, 16] represented as std::vector<bool>.
 *    For higher bitness computed when queried + memoized.
 *    `depth` and `nodes` computed for bitness in [4, 16].
 *
 * 3: Backed by circuits from benchmarks.
 ******************************************************************************/

/********************************* 1st type ***********************************/

// Minimum bitness for which trees are constructed.
uint16_t bb_min_tree_bitness();

size_t bb_tree_cases_number(uint16_t bitness);

// Input: 0/1 string of length bitness
// Output: 0/1 string of length 2 * bitness + 1
// Output consists of the input [bitness bits] followed by f(input) [1 bit]
// followed by f(input with flipped i-th bit) [1 bit x bitness]
const char* bb_tree_value(uint16_t bitness, size_t case_id, const char* input);

// Enqueues a C++-owned typed batch. Values have shape
// cases x reps x (2 * bitness + 1); targets have shape cases.
bb_data* bb_tree_value_tensor(
    bb_generator* generator,
    uint16_t bitness,
    size_t cases,
    size_t reps,
    uint64_t seed);

/********************************* 2nd type ***********************************/

// Maximum bitness for which table is representable as decision tree.
uint16_t bb_table_solvable_bitness();

size_t bb_table_cases_number(uint16_t bitness);

// Input: 0/1 string of length bitness
// Output: 0/1 string of length 2 * bitness + 1
// Output consists of the input [bitness bits] followed by f(input) [1 bit]
// followed by f(input with flipped i-th bit) [1 bit x bitness]
const char* bb_table_value(uint16_t bitness, size_t case_id, const char* input);

// For bitness above bb_table_solvable_bitness(), targets are null and the
// first restriction chunk is generated together with the values.
bb_data* bb_table_value_tensor(
    bb_generator* generator,
    uint16_t bitness,
    size_t cases,
    size_t reps,
    size_t restriction_chunk_cases,
    uint64_t seed);

// Enqueues restrictions for a contiguous range of cases from recursive table
// data. Output shape: cases x (2 * bitness) x reps x (2 * bitness - 1).
bb_tensor* bb_table_restrictions_tensor(
    bb_generator* generator,
    bb_data* table_data,
    size_t first_case,
    size_t cases);

/********************************* 3rd type ***********************************/

// Returns sorted newline-separated circuit set names discovered in circuits/
const char* bb_circuit_sets();

// Returns sorted newline-separated circuit case names for a set
const char* bb_circuit_cases(const char* set_name);

size_t bb_circuit_inputs(const char* set_name, const char* case_name);
size_t bb_circuit_outputs(const char* set_name, const char* case_name);

// Computes value samples for an AIG circuit.
// For sequential circuits, input_state contains primary inputs followed by latch state bits.
// Return length is N + M * (N + 1), where N = inputs and M = outputs:
// input_state + outputs(input_state) + outputs(input_state with flipped i-th bit).
const char* bb_circuit_value(const char* set_name, const char* case_name, const char* input_state);

#ifdef __cplusplus
}
#endif